Fixed lack of scrollbars caused by using fullscreen in two.js

--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,17 @@ footer {
 	font-size: 14px;
 }
 
-svg {
+#shape {
+	position: absolute;
+	top: 0;
+	left: 0;	
 	z-index: -1;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+svg {
 }
 
 /*------- Clearfix -------*/
